Changed some things on the GTK theme and completely disabled mouse acceleration

--- a/themes/.themes/JQN-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/JQN-Mono/gtk-3.0/gtk.css
@@ -457,7 +457,7 @@ list .h4 {
 avatar {
     border-radius: 9999px;
     font-weight: bold;
-    border: 3px solid #606060;
+    border: 3px solid #1b82b3;
 }
 
 avatar.color1 {
@@ -576,7 +576,7 @@ spinbutton:not(.vertical) selection,
 treeview.view:selected:focus,
 treeview.view:selected {
     color: white;
-    background-color: #606060;
+    background-color: #1b82b3;
 }
 
 label:selected,
@@ -697,7 +697,7 @@ textview text:selected:focus,
 iconview text:selected,
 textview text:selected {
     border-radius: 6px;
-    background-color: #606060;
+    background-color: #1b82b3;
 }
 
 iconview:selected:focus,
@@ -711,7 +711,7 @@ textview text:selected:focus,
 iconview text:selected,
 textview text:selected {
     border-radius: 6px;
-    background-color: #606060;
+    background-color: #1b82b3;
 }
 
 textview border {
@@ -10514,13 +10514,13 @@ tooltip.background.chromium {
 }
 
 #MozillaGtkWidget>widget border {
-    border-color: #606060;
+    border-color: #1b82b3;
 }
 
 #MozillaGtkWidget>widget>scrolledwindow>textview text:selected,
 #MozillaGtkWidget>widget>scrolledwindow>textview text:selected:focus,
 #MozillaGtkWidget>widget>scrolledwindow>textview text selection {
-    background-color: #606060;
+    background-color: #1b82b3;
     color: white;
 }
 
