--- a/themes/.themes/JQN-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/JQN-Mono/gtk-4.0/gtk-dark.css
@@ -341,7 +341,7 @@ dnd {
 avatar {
     border-radius: 9999px;
     font-weight: bold;
-    border: 3px solid #606060;
+    border: 3px solid #1b82b3;
 }
 
 
