--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -5,7 +5,7 @@
     border: none;
     border-radius: 0;
     font-family: "JetBrainsMono Nerd Font";
-    font-size: 13.15pt;
+    font-size: 13.5pt;
     min-height: 0
 }
 
@@ -20,7 +20,7 @@ window#waybar {
 /* Workspace Buttons */
 #workspaces button {
     min-width: 14px;
-    padding: 0 6px;
+    padding: 0 7.25px;
     background: transparent;
     color: @inactive;
     font-weight: 400;
@@ -45,29 +45,31 @@ window#waybar {
 
 /* Network Module */
 #network {
-    padding-right: 16px;
+    padding-right: 18px;
     padding-left: 8px;
+    font-size: 18.25px;
     color: @blue
 }
 
 /* Pulseaudio Module */
 #pulseaudio {
-    font-size: 18.5px;
-    padding-right: 14px;
+    font-size: 18.75px;
+    padding-right: 16px;
+    padding-bottom: 1px;
     color: @yellow
 }
 
 /* Clock Module */
 #clock {
-    padding-right: 7px;
+    padding-right: 8px;
     padding-left: 16px
 }
 
 /* Custom Power Module */
 #custom-power {
     padding-right: 16px;
-    padding-left: 7px;
-    font-size: 21.15px;
+    padding-left: 8px;
+    font-size: 22px;
     color: @red
 }
 
@@ -104,6 +106,7 @@ window#waybar {
 
 /* Battery Module */
 #battery {
-    padding-right: 8px;
+    font-size: 18.215px;
+    padding-right: 9px;
     color: @green
 }
