--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -6,21 +6,24 @@
     border-radius: 0;
     font-family: "JetBrainsMono Nerd Font";
     font-size: 13.5pt;
-    min-height: 0
+    min-height: 0;
+    padding-top: 1px;
+    padding-left: 2px;
+    padding-right: 3px
 }
 
 /* Waybar Window */
 window#waybar {
-    background-color: #1c1c1c;
     color: @fg;
+    background: rgba(0,0,0,0);
     padding-left: 2px;
     padding-right: 2px;
 }
 
 /* Workspace Buttons */
 #workspaces button {
-    min-width: 14px;
-    padding: 0 7.25px;
+    min-width: 12px;
+    padding: 0 4px;
     background: transparent;
     color: @inactive;
     font-weight: 400;
