Changed padding on waybar.

--- a/themes/.themes/JQN-Mono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/JQN-Mono/gtk-3.0/gtk-dark.css
@@ -453,7 +453,7 @@ list .h4 {
 avatar {
     border-radius: 9999px;
     font-weight: bold;
-    border: 3px solid #1b82b3;
+    border: 3px solid #1c1c1c;
 }
 
 avatar.color1 {
