--- a/themes/.themes/JQN-Mono/gtk-4.0/gtk.css
+++ b/themes/.themes/JQN-Mono/gtk-4.0/gtk.css
@@ -340,7 +340,7 @@ dnd {
 avatar {
     border-radius: 9999px;
     font-weight: bold;
-    border: 3px solid #1b82b3;
+    border: 3px solid #1c1c1c;
 }
 
 
