--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -44,20 +44,20 @@ window#waybar {
 
 /* System tray */
 #tray {
-    padding-right: 3.5px
+    padding-right: 11px;
+    padding-top: 2.5px
 }
 
 /* Network Module */
 #network {
-    font-size: 20px;
+    font-size: 19.5px;
     padding-right: 20px;
-    padding-left: 8px;
     color: @blue
 }
 
 /* Pulseaudio Module */
 #pulseaudio {
-    font-size: 21px;
+    font-size: 20.5px;
     padding-right: 18px;
     color: @yellow
 }
@@ -110,6 +110,6 @@ window#waybar {
 /* Battery Module */
 #battery {
     padding-right: 10px;
-    font-size: 20px;
+    font-size: 19.5px;
     color: @green
 }
